// 指定使用 Protocol Buffers 版本 3 的语法
syntax = "proto3";

// ======================== Go ========================
// go_package: 指定生成的代码存放的包路径
option go_package = "pb/";

// ======================== Java ========================
// java_multiple_files: 设置为生成多个文件而不是一个大的外部类文件；
// java_package: 指定生成的 Java 代码所在的包名；
// java_outer_classname:生成的类名称，包含服务定义，消息类型；
option java_multiple_files = true;
option java_package = "com.xiaohan.demo.grpc.server.pb";

package helloService;

// rpc服务
service HelloService {
    rpc sayHello (HelloRequest) returns (HelloResponse) {}
}

// 消息定义
message HelloRequest {
    string source = 1;
    string message = 2;
}

// 消息定义
message HelloResponse {
    string source = 1;
    string message = 2;
}